Image upload process + right-click menu UI

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -14,6 +14,7 @@ $warning: $orange;
 @import 'bulma';
 @import './libs/twemoji-awesome';
 @import './libs/animate.min.css';
+@import './libs/jquery-contextmenu';
 
 @import './components/_alerts';
 @import './components/_editor';
