--- a/views/pages/edit.pug
+++ b/views/pages/edit.pug
@@ -6,7 +6,7 @@ block rootNavCenter
 block rootNavRight
 	i.nav-item#notifload
 	span.nav-item
-		a.button.is-warning.btn-edit-discard
+		a.button.is-warning.is-outlined.btn-edit-discard
 			span.icon
 				i.fa.fa-times
 			span Discard
