--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,1 +1,43 @@
-DUDE
+doctype html
+html
+	head
+		meta(http-equiv='X-UA-Compatible', content='IE=edge')
+		meta(charset='UTF-8')
+		meta(name='viewport', content='width=device-width, initial-scale=1')
+		meta(name='theme-color', content='#009688')
+		meta(name='msapplication-TileColor', content='#009688')
+		meta(name='msapplication-TileImage', content='/favicons/ms-icon-144x144.png')
+		title= appconfig.title
+
+		// Favicon
+		each favsize in [57, 60, 72, 76, 114, 120, 144, 152, 180]
+			link(rel='apple-touch-icon', sizes=favsize + 'x' + favsize, href='/favicons/apple-icon-' + favsize + 'x' + favsize + '.png')
+		link(rel='icon', type='image/png', sizes='192x192', href='/favicons/android-icon-192x192.png')
+		each favsize in [32, 96, 16]
+			link(rel='icon', type='image/png', sizes=favsize + 'x' + favsize, href='/favicons/favicon-' + favsize + 'x' + favsize + '.png')
+		link(rel='manifest', href='/manifest.json')
+
+		// CSS
+		link(type='text/css', rel='stylesheet', href='/css/libs.css')
+		link(type='text/css', rel='stylesheet', href='/css/login.css')
+
+		// JS
+		script(type='text/javascript', src='/js/libs.js')
+		script(type='text/javascript', src='/js/login.js')
+
+	body
+		#bg
+			each bg in [1, 2, 3]
+				div(style="background-image:url(/images/bg_" + bg + ".jpg);")
+		#root
+			h1= appconfig.title
+			h2 Login required
+			input#login-user(type='text', placeholder='Email address')
+			input#login-pass(type='password', placeholder='Password')
+			button Log In
+		#copyright
+			= t('footer.poweredby') + ' '
+			a.icon(href='https://github.com/Requarks/wiki')
+				i.fa.fa-github
+			a(href='https://github.com/Requarks/wiki') Requarks Wiki
+			
