--- a/client/scss/libs/bulma/utilities/variables.sass
+++ b/client/scss/libs/bulma/utilities/variables.sass
@@ -20,7 +20,7 @@ $yellow: #fce473 !default
 
 // Typography
 
-$family-monospace: monospace;
+$family-monospace: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 $family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
 $size-1: 48px !default
