--- a/client/scss/components/_editor.scss
+++ b/client/scss/components/_editor.scss
@@ -205,6 +205,7 @@
 	border-left: none;
 	border-right: none;
 	padding-top: 52px;
+	font-family: $family-monospace;
 }
 
 .CodeMirror .CodeMirror-code .cm-url {
