--- a/views/pages/view.pug
+++ b/views/pages/view.pug
@@ -44,7 +44,7 @@ block content
 										li
 											a(href='/' + pageData.parent.path)= pageData.parent.title
 									li
-										a(href='/account') Account
+										a(href='/admin') Account
 						.box.stickyscroll(data-margin-top=70)
 							aside.menu(style= { 'min-width': '200px' })
 								p.menu-label
