Integration to Requarks Core

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -1,17 +1,22 @@
-//@import './layout/_fonts';
-@import './layout/_base';
-@import './layout/_mixins';
+@import 'core-client/scss/core';
+@import 'core-client/scss/components/alert';
+@import 'core-client/scss/components/button';
+@import 'core-client/scss/components/form';
+@import 'core-client/scss/components/grid';
+@import 'core-client/scss/components/hero';
+@import 'core-client/scss/components/markdown-content';
+@import 'core-client/scss/components/modal';
+@import 'core-client/scss/components/nav';
+@import 'core-client/scss/components/sidebar';
+@import 'core-client/scss/components/typography';
 
-@import './libs/bulma/bulma';
 @import './libs/twemoji-awesome';
-@import './libs/animate.min.css';
 @import './libs/jquery-contextmenu';
 
-@import './components/_alerts';
-@import './components/_editor';
+//@import './components/_editor';
 
 @import './layout/_header';
 @import './layout/_footer';
-@import './layout/_content';
+//@import './layout/_content';
 
-@import './pages/_account';
+//@import './pages/_account';
