--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,7 +28,7 @@ html
 		block head
 
 	body
-		#root
+		#root.has-stickynav
 			include ./common/header.pug
 			include ./common/alerts.pug
 			main
