--- a/views/pages/edit.pug
+++ b/views/pages/edit.pug
@@ -6,13 +6,11 @@ block rootNavCenter
 block rootNavRight
 	i.nav-item#notifload
 	span.nav-item
-		a.button.is-warning.is-outlined.btn-edit-discard
-			span.icon
-				i.fa.fa-times
+		a.button.is-orange.is-outlined.btn-edit-discard
+			i.fa.fa-times
 			span Discard
-		a.button.is-success.btn-edit-save
-			span.icon
-				i.fa.fa-check
+		a.button.is-green.btn-edit-save
+			i.fa.fa-check
 			span Save Changes
 
 block content
