--- a/client/scss/layout/_header.scss
+++ b/client/scss/layout/_header.scss
@@ -13,7 +13,7 @@
 
 h2.nav-item {
 	font-size: 150%;
-	color: $orange;
+	color: mc('orange', '500');
 }
 
 #notifload {
@@ -26,7 +26,7 @@ h2.nav-item {
 
 	&::before {
 		content: " ";
-		@include spinner($orange,0.5s,24px);
+		@include spinner(mc('orange', '500'),0.5s,24px);
 	}
 
 	&.active {
