Modals styling + Fix for gapless first <p>

--- a/views/modals/create-discard.pug
+++ b/views/modals/create-discard.pug
@@ -2,12 +2,9 @@
 	.modal-background
 	.modal-container
 		.modal-content
-			.card.is-fullwidth
-				header.card-header.is-warning
-					p.card-header-title Discard?
-				.card-content
-					.content
-						| Are you sure you want to leave this page and loose anything you wrote so far?
-				footer.card-footer
-					a.card-footer-item.btn-create-discard Stay on page
-					a.card-footer-item(href='/') Discard
+				header.is-orange Discard?
+				section
+					span Are you sure you want to leave this page and loose anything you wrote so far?
+				footer
+					a.button.is-grey.is-outlined.btn-create-discard Stay on page
+					a.button.is-orange(href='/') Discard
