--- a/views/modals/create.pug
+++ b/views/modals/create.pug
@@ -3,15 +3,12 @@
 	.modal-background
 	.modal-container
 		.modal-content
-			.card.is-fullwidth
-				header.card-header
-					p.card-header-title Create New Page
-				.card-content
-					.content
-						label.label Enter the new document path:
-						p.control
-							input.input(type='text', placeholder='page-name')#txt-create-prompt
-							span.help.is-danger.is-hidden This document path is invalid!
-				footer.card-footer
-					a.card-footer-item.btn-create-prompt Discard
-					a.card-footer-item.btn-create-go Create
+				header.is-light-blue Create New Document
+				section
+					label.label Enter the new document path:
+					p.control.is-fullwidth
+						input.input(type='text', placeholder='page-name')#txt-create-prompt
+						span.help.is-danger.is-hidden This document path is invalid!
+				footer
+					a.button.is-grey.is-outlined.btn-create-prompt Discard
+					a.button.is-light-blue.btn-create-go Create
