Navbar revamp + Footer

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -1,6 +1,7 @@
 @import 'core-client/scss/core';
 @import 'core-client/scss/components/alert';
 @import 'core-client/scss/components/button';
+@import 'core-client/scss/components/footer';
 @import 'core-client/scss/components/form';
 @import 'core-client/scss/components/grid';
 @import 'core-client/scss/components/hero';
@@ -16,7 +17,6 @@
 //@import './components/_editor';
 
 @import './layout/_header';
-@import './layout/_footer';
 //@import './layout/_content';
 
 //@import './pages/_account';
