--- a/views/pages/admin/_layout.pug
+++ b/views/pages/admin/_layout.pug
@@ -5,8 +5,8 @@ block rootNavCenter
 
 block rootNavRight
 	i.nav-item#notifload
-	span.nav-item
-		a.button.is-dark.is-outlined.btn-edit-discard(href='/')
+	.nav-item
+		a.button.btn-edit-discard(href='/')
 			span.icon
 				i.fa.fa-home
 			span Home
