--- a/views/pages/edit.pug
+++ b/views/pages/edit.pug
@@ -6,11 +6,11 @@ block rootNavCenter
 block rootNavRight
 	i.nav-item#notifload
 	span.nav-item
-		a.button.is-orange.is-outlined.btn-edit-discard
-			i.fa.fa-times
+		a.button.is-outlined.btn-edit-discard
+			i.icon-cross
 			span Discard
-		a.button.is-green.btn-edit-save
-			i.fa.fa-check
+		a.button.btn-edit-save
+			i.icon-check
 			span Save Changes
 
 block content
